fix: top spacing

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ ion-page {
 }
 
 ion-content {
-    --offset-top: calc(-100px - env(safe-area-inset-top)) !important;
+  --offset-top: calc(-84px - env(safe-area-inset-top)) !important;
 }
 
 /* Optional: Tab Bar Styling */
